# ecovacs_bajie_sdk

./: .gitignore  NOTICE  README.md
cpp/: CMakeLists.txt  Makefile  README.md  README_CN.md  RELEASE_NOTE.md
cpp/cmake/: robot_sdk_prebuilt.cmake  robot_sdk_target.cmake
cpp/common/: sdk_response_helpers.h
cpp/delivery_demo/: CMakeLists.txt  delivery_demo.cpp
cpp/depend/include/robot_sdk/: client.h  desk_intent.h  export.h  img_match.h  location.h  math_utils.h  ovd.h  pose_tools.h  put_where.h  robot_func.h  robot_info.h  robot_sdk.h  shoes_intent.h  types.h
cpp/desk_demo/: CMakeLists.txt  desk_demo.cpp  speech.cpp  speech.hpp
cpp/shoe_sorting_demo/: CMakeLists.txt  execution.cpp  execution.h  pairing.cpp  pairing.h  planning.cpp  planning.h  shoe_sorting_demo.cpp  visualize.cpp  visualize.h
cpp/toy_storage_demo/: CMakeLists.txt  toy_storage_demo.cpp
python/: README.md  README_CN.md  RELEASE_NOTE.md
python/beginner_journey/: 00_Getting to Know the BAJIE Robot & SDK.ipynb  01_Environment Setup & SDK Installation.ipynb  02_First Connection to the Robot.ipynb  03_Learning to Query APIs and Fields.ipynb  04_Robot Status & Safety Check.ipynb  05_Photography & Image Understanding.ipynb  06_Open Vocabulary Detection Basics.ipynb  07_Navigation & Basic Body Control.ipynb  08_Synchronous Tasks — Asynchronous Callbacks & Task Control.ipynb  09_Pick-and-Place Minimal Closed Loop.ipynb  10_Advanced Tasks & Existing Demo Walkthrough.ipynb  README_Course Overview.ipynb  generate_notebooks.py  helpers.py  install.sh
python/delivery_demo/: delivery_demo.py  errors.py  execution.py  models.py  planning.py  workflow.py
python/desk_demo/: desk_demo.py  errors.py  execution.py  judge.py  models.py  perception.py  planning.py  ref_utils.py  retry_utils.py  speech.py  workflow.py
python/shoe_sorting_demo/: execution.py  matching.py  pairing.py  planning.py  shoe_sorting_demo.py  visualize_plans.py
python/toy_storage_demo/: errors.py  execution.py  models.py  planning.py  toy_storage_demo.py  workflow.py
